--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "js-alert": "^1.0.4",
     "mysql-import": "^1.0.13",
     "node-mysql-import": "^1.1.0"
